Fix style popup explorer on iOS

--- a/src/theme/components/ionic/ion-item.scss
+++ b/src/theme/components/ionic/ion-item.scss
@@ -2,6 +2,7 @@ ion-item {
   --border: 0;
   --background: var(--ion-color-primary);
   border-radius: 8px;
+  --border-radius: 8px;
   --color: var(--ion-text-color);
   --min-height: auto;
   --padding-start: 17px;
